Adding all the default page in there but mainly adding the p1 folder in htdocs for the part 1 of the project to start static page.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
-	<nav>
-		<a href="index.html">Home</a> |
-		<a href="about.html">About</a> |
-		<a href="contact.html">Contact</a>
-	</nav>
-	<main>
-		Welcome to the Batcave.
-	</main>
+	<head></head>
+	<body>
+		<nav data-include="nav.html">
+		</nav>
+		<main>
+			Welcome to the Batcave.
+		</main>
+		<footer data-include="footer.html"></footer>
+		<script src="index.js"></script>
+		<script>
+			includeall()
+		</script>
+	</body>
 </html>
