--- a/about.html
+++ b/about.html
@@ -1,10 +1,12 @@
 <html>
-	<nav>
-		<a href="index.html">Home</a> |
-		<a href="about.html">About</a> |
-		<a href="contact.html">Contact</a>
+	<nav data-include="nav.html">
 	</nav>
 	<main>
 		I'm Batman.
 	</main>
+	<footer data-include="footer.html"></footer>
+	<script src="index.js"></script>
+	<script>
+		includeall()
+	</script>
 </html>
