--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,13 @@
 <html>
-	<nav>
-		<a href="index.html">Home</a> |
-		<a href="about.html">About</a> |
-		<a href="contact.html">Contact</a>
+	<nav data-include="nav.html">
 	</nav>
 	<main>
 		Contact me by sending the Bat Signal into the sky. It looks like this:<BR>
 		<img src="batsignal.jpg" style="width:200px">
 	</main>
+	<footer data-include="footer.html"></footer>
+	<script src="index.js"></script>
+	<script>
+		includeall()
+	</script>
 </html>
